# Python-Mastery-Hub

./: .bandit  .flake8  .gitignore  DOCUMENTATION.md  Dockerfile  PROJECT_COMPLETION.md  STATUS.md  demo.py  pyproject.toml  quickstart.sh  validate_project.sh
.github/workflows/: cd.yml  ci.yml  codeql.yml
deployment/terraform/: main.tf
src/python_mastery_hub/: __init__.py
src/python_mastery_hub/cli/: __init__.py  __main__.py  main.py
src/python_mastery_hub/cli/commands/: __init__.py  demo.py  learn.py  progress.py  test.py
src/python_mastery_hub/cli/interactive/: __init__.py  exercises.py  quiz.py  repl.py
src/python_mastery_hub/cli/utils/: __init__.py  colors.py  input_validation.py  progress_bar.py
src/python_mastery_hub/core/: __init__.py  config.py
src/python_mastery_hub/core/advanced/: __init__.py  base.py  context_managers.py  decorators.py  descriptors.py  generators.py  metaclasses.py
src/python_mastery_hub/core/advanced/exercises/: __init__.py  caching_director.py  file_pipeline.py  orm_metaclass.py  transaction_manager.py
src/python_mastery_hub/core/algorithms/: __init__.py  algorithmic_patterns.py  base.py  dynamic_programming.py  graph_algorithms.py  searching.py  sorting.py
src/python_mastery_hub/core/algorithms/exercises/: __init__.py  dijkstra_exercise.py  lcs_exercise.py  quicksort_exercise.py
src/python_mastery_hub/core/async_programming/: __init__.py  async_basics.py  asyncio_patterns.py  base.py  concurrent_features_concepts.py  concurrent_futures_concepts.py  multiprocessing_concepts.py  threading_concepts.py
src/python_mastery_hub/core/async_programming/exercises/: __init__.py  async_scraper_exercise.py  parallel_processor_exercise.py  producer_consumer_exercise.py
src/python_mastery_hub/core/basics/: __init__.py  base.py  control_flow_concepts.py  data_types_concepts.py  error_handling_concepts.py  functions_concepts.py  variables_concepts.py
src/python_mastery_hub/core/basics/exercises/: __init__.py  control_flow_exercise.py  data_type_conversion_exercise.py  function_design_exercise.py  variable_assignment_exercise.py
src/python_mastery_hub/core/data_science/: __init__.py
src/python_mastery_hub/core/data_science/config/: __init__.py  topics.py
src/python_mastery_hub/core/data_science/examples/: __init__.py  ml_examples.py  numpy_examples.py  pandas_examples.py  preprocessing_examples.py  statistics_examples.py  visualization_examples.py
src/python_mastery_hub/core/data_science/exercises/: __init__.py  dashboard.py  data_analysis.py  ml_pipeline.py
src/python_mastery_hub/core/data_science/utils/: __init__.py  best_practices.py  explanations.py
src/python_mastery_hub/core/data_structures/: __init__.py
src/python_mastery_hub/core/data_structures/config/: __init__.py  topics.py
src/python_mastery_hub/core/data_structures/examples/: __init__.py  advanced_examples.py  applications_examples.py  builtin_examples.py  custom_examples.py  performance_examples.py
src/python_mastery_hub/core/data_structures/exercises/: __init__.py  bst.py  cache.py  learning_path.py  linkedlist.py  registry.py
src/python_mastery_hub/core/data_structures/utils/: __init__.py  best_practices.py  explanations.py
src/python_mastery_hub/core/oop/: __init__.py  core.py
src/python_mastery_hub/core/oop/examples/: __init__.py  classes_examples.py  design_patterns_examples.py  encapsulation_examples.py  inheritance_examples.py  polymorphism_examples.py
src/python_mastery_hub/core/oop/exercises/: __init__.py  employee_hierarchy_exercise.py  library_exercise.py  observer_pattern_exercise.py  shape_calculator_exercise.py
src/python_mastery_hub/core/testing/: __init__.py  core.py
src/python_mastery_hub/core/testing/examples/: __init__.py  integration_examples.py  mocking_examples.py  performance_examples.py  pytest_examples.py  tdd_examples.py  unittest_examples.py
src/python_mastery_hub/core/testing/exercises/: __init__.py  integration_exercise.py  mocking_exercise.py  observer_pattern_exercise.py  shape_calculator_exercises.py  tdd_exercise.py  unittest_exercise.py
src/python_mastery_hub/core/web_development/: __init__.py  core.py
src/python_mastery_hub/core/web_development/examples/: __init__.py  (+6 more)
src/python_mastery_hub/database/: __init__.py  base.py  connection.py  session.py  utils.py
src/python_mastery_hub/utils/: __init__.py  achievement_engine.py  cache_manager.py  code_execution.py  data_exporters.py  email_templates.py  file_handlers.py  formatters.py  logging_config.py  metrics_collector.py  progress_calculator.py  security_utils.py  validators.py
src/python_mastery_hub/web/: __init__.py  app.py  main.py
src/python_mastery_hub/web/api/: __init__.py  admin.py  auth.py  exercises.py  modules.py  progress.py
src/python_mastery_hub/web/config/: __init__.py  cache.py  database.py  security.py
src/python_mastery_hub/web/middleware/: __init__.py  auth.py  cors.py  error_handling.py  rate_limiting.py
src/python_mastery_hub/web/routes/: __init__.py  admin.py  api.py  auth.py  dashboard.py  exercises.py  modules.py
src/python_mastery_hub/web/services/: __init__.py  auth_service.py  code_executor.py  email_service.py  progress_service.py
tests/: conftest.py
tests/e2e/: test_exercise_submission.py  test_learning_flow.py  test_user_journey.py
tests/fixtures/: __init__.py  database.py  exercises.py  users.py
tests/integration/: test_api_integration.py  test_cli_integration.py  test_database_integration.py  test_web_integration.py
tests/performance/: test_load.py  test_stress.py
tests/performance/benchmarks/: __init__.py  api_benchmarks.py  benchmark_runner.py  code_execution_benchmarks.py  database_benchmarks.py
tests/unit/cli/: test_commands.py  test_interactive.py  test_utils.py
tests/unit/core/: test_advanced.py  test_algorithms.py  test_async.py  test_basics.py  test_data_science.py  test_data_structures.py  test_oop.py  test_testing.py  test_web_dev.py
tests/unit/utils/: test_helpers.py  test_validators.py
tests/unit/web/: test_api.py  test_middleware.py  test_models.py  test_services.py
(+11 files in other folders)
